fix(footer): delete extra spacing between article and separator

--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -24,8 +24,9 @@
 
   .section__separator {
     position: absolute;
-    bottom:  calc(56px / 2);
+    bottom:  0%;
     left: 0%;
+    transform: translateY(-50%);
     height: 56px;
     width: 56px;
     display: grid;
@@ -56,7 +57,7 @@
 
   .footer__article {
     padding: 64px 32px;
-    padding-block-start: -20px;
+    padding-block-start: calc(64px - 56px);
     display: grid;
     gap: 24px;
     place-items: center;
